2004-02-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Updated with h2defs.py
	* gtk/src/gtk_signals.defs: Updated with generate_extra_defs, keeping
	hand-coded changes for the Widget _event signals.
	* gtk/src/gtk_enums.defs: Updated with glibmm/tools/enums.pl.
	* gdk/src/pixbufloader.hg: Added set_size() as wrapper for 
	gdk_pixbuf_loader_set_size().
	* gtk/src/cellrenderer.hg: Wrapped editing_cancelled() and the
	editing_cancelled signal, for use by CellRenderer implementations.
	* gtk/src/action.hg: Added get_visible(), get_sensitive(), 
	is_visible(), is_sensitive().
	* gtk/src/actiongroup.hg: Added set_sensitive(), set_visible(), 
	get_visible(), get_sensitive().
	* gtk/src/uimanager.hg: Wrapped the proxy_connected, 
	proxy_disconnected, pre_activate, and post_activate signals.
	* gtk/src/widget.hg: Wrapped event_after signal.

2004-02-11  Bryan Forbes  <mxpxfifws@yahoo.com>

	* examples/cellrenderercustom/popupentry.cc: change to use Gtk::Requisition.
	* examples/dnd/dndwindow.cc: change to use Gtk::AtomString::to_cpp_type.
	* gdk/src/drawable.hg: changed the PangoGlyphString* arg to
	Pango::GlyphString& since that argument is not an array. closes bug #97036
	* gdk/src/window.[ccg|hg]: changed methods that use GList* to a
	Glib::ListHandle<>; wrote get_internal_paint_info by hand because we need a
	temporary variable.
	* gtk/gtkmm/stock.[cc|h]: added the new Authentication dialog stock icon.
	* gtk/src/Makefile_list_of_hg.am_fragment: added new iconinfo.hg.
	* gtk/src/filechooser.hg: changed the GSList* returned by get_uris() to a
	Glib::SListHandle<Glib::ustring>.
	* gtk/src/iconinfo.[ccg|hg]: added new class to deal with GtkIconInfo.
	* gtk/src/icontheme.[ccg|hg]: changed to use new IconInfo class; hand coded
	get|set_search_path.
	* gtk/src/window.hg: added property "role".
	* tools/m4/convert_gtk.m4: added conversion for GtkIconInfo*->IconInfo.

2.3.4:

2004-02-13  Murray Cumming  <murrayc@usa.net>
