@@ -1,3 +1,7 @@
+2004-02-26  Bryan Forbes  <mxpxfifws@yahoo.com>
+
+	* examples/stock/stock.cc: fixed to use the new Toolbar API.
+
 2004-02-14  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_methods.defs: Updated with h2defs.py
